# python-poetry-boilerplate

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml  integration.yaml
alembic/: env.py
alembic/versions/: 2a72ba647d68_.py
app_name/: config.py  logging.py  main.py
app_name/models/: __init__.py  base.py  profile.py
tests/: test_cli.py
