[tool.poetry]
name = "app-name"
version = "0.1.0"
description = ""
authors = ["Lukasz Jachym <lukasz.jachym@gmail.com>"]
readme = "README.md"
packages = [{include = "app_name"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
