[tool.poetry]
name = "app-name"
version = "0.2.0"
description = ""
authors = ["Lukasz Jachym <lukasz.jachym@gmail.com>"]
readme = "README.md"
packages = [{include = "app_name"}]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pre-commit = "^3.1.0"
mypy = "^1.0.1"
ruff = "^0.11.0"

[tool.poetry.scripts]
app-cli = 'app_name:main.cli'

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.isort]
profile = "black"
src_paths = ["app_name", "tests"]
