[tool.poetry]
name = "app-name"
version = "0.2.1"
description = ""
authors = ["Lukasz Jachym <lukasz.jachym@gmail.com>"]
readme = "README.md"
packages = [{include = "app_name"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.8.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
alembic = "^1.15.2"
asyncpg = "^0.30.0"
sqlalchemy-cockroachdb = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pre-commit = "^3.1.0"
mypy = "^1.0.1"
ruff = "^0.11.0"

[tool.poetry.scripts]
app-cli = 'app_name:main.cli'

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.isort]
profile = "black"
src_paths = ["app_name", "tests"]
